# monodevdoc

./: .env.example  .gitignore  DEPLOYMENT.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  system-overview.md  tsconfig.json
app/: main.py
app/services/: rag_service.py
apps/web/: .env.example  middleware.ts  next.config.ts  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/branches/: layout.tsx  page.tsx
apps/web/app/components/: Header.tsx  Sidebar.tsx
apps/web/app/dashboard/: layout.tsx  page.tsx
apps/web/app/editor/: page.tsx  tiptap-styles.css
apps/web/app/generate/: layout.tsx  (+1 more)
prisma/migrations/20251218230309_init_schema_consolidated/: migration.sql
scripts/: test_connections.py
services/bff/: .env.example  jest.config.js  package.json
services/bff/pages/: index.tsx
services/bff/tests/: auth.test.ts  callback.test.ts
services/journal-service/: .env.example  Dockerfile  README.md  jest.config.js  package.json  swagger.yaml
services/journal-service/prisma/: schema.prisma
services/journal-service/src/: app.ts
services/rag-service/: .env.example  .gitignore  Dockerfile  README.md  docs.md  requirements.txt
services/rag-service/app/: config.py  main.py  schemas.py
services/rag-service/scripts/: setup_pinecone.py
services/rag-service/tests/: test_api.py
src/: app.ts  types.ts
src/devdoc_contracts/: schemas.py
src/services/: githubService.ts
tests/: app.test.ts
tests/mocks/: octokit.js
tests/services/: githubService.test.ts  journalService.test.ts
(+46 files in other folders)
